<resources>
    <string name="app_name">CatAndBird</string>
    <string name="login_button">Login</string>
    <string name="register">register</string>
    <string name="member">Not a member yet</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="newcar">TextView</string>
    <string name="mia">Скажи м\'яу</string>
    <string name="something">Щось цікаве</string>
    <string name="cost">Зроби кусь-кусь</string>
    <string name="Catting">Cat and bird</string>
    <string name="Click">Натисни на кнопку</string>
    <string name="todo">TODO</string>
</resources>